<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/medium_padding"
    tools:context=".ui.SecondActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirma tu información"
        android:padding="@dimen/medium_padding"
        android:fontFamily="serif-monospace"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namefield"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/medium_padding"
        />

    <TextView

        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailfield"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/medium_padding"
        />

    <TextView

        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefonofield"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/medium_padding"
        />

    <Button
        android:id="@+id/textButtonShare"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:text="@string/share_text"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/button_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPhone" />

</androidx.appcompat.widget.LinearLayoutCompat>